--- a/scss/style.scss
+++ b/scss/style.scss
@@ -121,6 +121,17 @@
                         input:focus {
                             outline: none;
                         }
+
+                        button{
+                            background-color: #576c89;
+                            color: white;
+                            border: white inset 1px;
+                            border-radius: 5%;
+                            padding: 4px;
+                            padding-right: 15%;
+                            font-family: "Nunito", sans-serif;
+                            font-size: 15px;
+                        }
                     }
         
                     .botones{
@@ -140,6 +151,11 @@
                     }
                 }
             }
+
+            .disable{
+                display: none ;
+            }
+
         }
         
         footer{
