--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,15 @@
 .html-form body main section form .inicio input:focus {
   outline: none;
 }
+.html-form body main section form .inicio p {
+  color: white;
+  padding-left: 10%;
+  padding-right: 10%;
+  border-radius: 5%;
+  background-color: red;
+  font-size: 15px;
+  font-weight: 600;
+}
 .html-form body main section form .inicio-disable {
   display: none;
 }
@@ -121,6 +130,15 @@
   font-family: "Nunito", sans-serif;
   font-size: 15px;
 }
+.html-form body main section form .registro p {
+  color: white;
+  padding-left: 10%;
+  padding-right: 10%;
+  border-radius: 5%;
+  background-color: red;
+  font-size: 15px;
+  font-weight: 600;
+}
 .html-form body main section form .botones {
   display: flex;
   align-items: center;
@@ -134,6 +152,12 @@
   font-family: "Nunito", sans-serif;
   font-weight: 600;
   font-size: 20px;
+}
+.html-form body main section form .botones .disable {
+  display: none;
+}
+.html-form body main section form .disable {
+  display: none;
 }
 .html-form body main .disable {
   display: none;
