--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,159 +26,146 @@
         
         main{
             height: 74.2%;
-            display: flex;
-            align-items: center;
 
-            section{
-                width: 100%;
+            .main-config{
                 display: flex;
                 justify-content: center;
-                padding: 10px;
-        
-                form{
-        
-                    border: transparent solid 1px;
-                    border-radius: 5%;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    flex-direction: column;
-                    gap: 30px;
-                    width: 30%;
-                    background-color: rgba(74, 74, 74, 0.95);
-        
-                    div{
-                        width: 100%;
-                        margin: 5px;
-                        h1{
-                            color: #e4ffc6;
-                            margin-left: 5%;
-                            font-family: 'Sigmar', cursive;
-                            font-size: 25px;
-                            margin-bottom: 0px;
-                        }
-                    }
-            
-                    .inicio{
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                        flex-direction: column;
-                        gap: 10px;
+                padding: 2%;
+                align-items: start;
 
-                        input{
-                            outline: none;
-                            background-color: #576c89;
-                            border: #576c89 solid 1px;
-                            border-radius: 5%;
-                            padding: 4px;
-                            padding-right: 15%;
-                            color: #e4ffc6;
-                            font-family: "Nunito", sans-serif;
-                            font-size: 15px;
-                        }
-
-                        input::placeholder{ 
-                            border: 0px;
-                            color: white;
-                            font-family: "Nunito", sans-serif;
-                        }
-
-                        input:focus {
-                            outline: none;
-                        }
-                        p{
-                            color: white;
-                            padding-left: 10%;
-                            padding-right: 10%;
-                            border-radius: 5%;
-                            background-color: red;
-                            font-size: 15px;
-                            font-weight: 600;
-                        }
-                    }
-
-                    .inicio-disable{
-                        display: none ;
-                    }
-
-                    .registro{
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                        flex-direction: column;
-                        gap: 10px;
-
-                        input{
-                            outline: none;
-                            background-color: #576c89;
-                            border: #576c89 solid 1px;
-                            border-radius: 5%;
-                            padding: 4px;
-                            padding-right: 15%;
-                            color: #e4ffc6;
-                            font-family: "Nunito", sans-serif;
-                            font-size: 15px;
-                        }
-
-                        input::placeholder{ 
-                            border: 0px;
-                            color: white;
-                            font-family: "Nunito", sans-serif;
-                        }
-
-                        input:focus {
-                            outline: none;
-                        }
-
-                        button{
-                            background-color: #576c89;
-                            color: white;
-                            border: white inset 1px;
-                            border-radius: 5%;
-                            padding: 4px;
-                            padding-right: 15%;
-                            font-family: "Nunito", sans-serif;
-                            font-size: 15px;
-                        }
-
-                        p{
-                            color: white;
-                            padding-left: 10%;
-                            padding-right: 10%;
-                            border-radius: 5%;
-                            background-color: red;
-                            font-size: 15px;
-                            font-weight: 600;
-                        }
-                    }
-        
-                    .botones{
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                        flex-direction: row;
-                        gap: 10px;
-
-                        button{
-                            color: #576c89;
-                            background-color: #e4ffc6;
-                            font-family: "Nunito", sans-serif;
-                            font-weight: 600;
-                            font-size: 20px;
-                        }
-                        .disable{
-                            display: none ;
-                        }
-                    }
-                    .disable{
-                        display: none ;
+                div{
+                    h1{
+                        color: #e4ffc6;
+                        margin-left: 5%;
+                        font-family: 'Sigmar', cursive;
+                        font-size: 25px;
+                        margin-bottom: 0px;
                     }
                 }
-            }
+                .medioPago-cerrarSesion{
+                    display: flex;
+                    border: 2px solid black;
+                    flex-direction: column;
+                    border: transparent solid 1px;
+                    border-radius: 5%;
+                    gap: 25px;
+                    background-color: rgba(74, 74, 74, 0.95);
+                    padding: 1%;
+                    width: 32%;
 
-            .disable{
-                display: none;
+                    .primer-ajuste-usuario{
+                        display: flex;
+                        align-items: center;
+                        flex-direction: row;
+                        gap: 4%;
+                        white-space: nowrap;
+                        padding: 2%;
+                        justify-content: center;
+                        div{
+                            display: flex;
+                            align-items: center;
+                            flex-direction: column;
+                            background-color: #576c89;
+                            border-radius: 5%;
+                            padding: 10px;
+
+                            h3{
+                                font-family: "Nunito", sans-serif;
+                                font-size: 20px;
+                                color: #e4ffc6;
+                            }
+
+                            button{
+                                background-color: rgb(74, 74, 74);;
+                                border: #576c89 solid 1px;
+                                border-radius: 12%;
+                                color: #e4ffc6;
+                            }
+                        }
+
+                        div:hover{
+                            background-color: #e4ffc6;
+
+                            h3{
+                                font-family: "Nunito", sans-serif;
+                                font-size: 20px;
+                                color: #576c89;
+                                font-weight: 600;
+                            }
+
+                            button{
+                                background-color: rgb(74, 74, 74);;
+                                border: #576c89 solid 1px;
+                                border-radius: 12%;
+                                color: #e4ffc6;
+                            }
+                        }
+                    }
+                }
+
+                .medioPago{
+                    display: flex;
+                    border: 2px solid black;
+                    flex-direction: column;
+                    border: transparent solid 1px;
+                    border-radius: 5%;
+                    gap: 25px;
+                    background-color: rgba(74, 74, 74, 0.95);
+                    padding: 1%;
+                    width: 37%;
+
+                    .opcionesTarjeta{
+                        display: flex;
+                        align-items: center;
+                        flex-direction: row;
+                        gap: 4%;
+                        white-space: nowrap;
+                        padding: 2%;
+                        justify-content: center;
+                        div{
+                            display: flex;
+                            align-items: center;
+                            flex-direction: column;
+                            background-color: #576c89;
+                            border-radius: 5%;
+                            padding: 10px;
+
+                            h3{
+                                font-family: "Nunito", sans-serif;
+                                font-size: 20px;
+                                color: #e4ffc6;
+                            }
+
+                            button{
+                                background-color: rgb(74, 74, 74);;
+                                border: #576c89 solid 1px;
+                                border-radius: 12%;
+                                color: #e4ffc6;
+                            }
+
+                        }
+                        div:hover{
+                            background-color: #e4ffc6;
+
+                            h3{
+                                font-family: "Nunito", sans-serif;
+                                font-size: 20px;
+                                color: #576c89;
+                                font-weight: 600;
+                            }
+
+                            button{
+                                background-color: rgb(74, 74, 74);;
+                                border: #576c89 solid 1px;
+                                border-radius: 12%;
+                                color: #e4ffc6;
+                            }
+                        }
+                    }
+                }
+                .disable-MPCS{
+                    display: none;
+                }
             }
         }
         
